--- a/singleton/package.json
+++ b/singleton/package.json
@@ -4,7 +4,8 @@
   "description": "Singleton Design Pattern",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "init": "tsc singleton.ts"
   },
   "author": "Gabriel Soares",
   "license": "ISC"
