--- a/singleton/package.json
+++ b/singleton/package.json
@@ -2,10 +2,10 @@
   "name": "singleton",
   "version": "1.0.0",
   "description": "Singleton Design Pattern",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "init": "tsc singleton.ts"
+    "start": "tsx main.ts"
   },
   "author": "Gabriel Soares",
   "license": "ISC"
